frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-frontend
  template:
    metadata:
      labels:
        app: react-frontend
    spec:
      containers:
      - name: react-frontend
        image: donggunacr.azurecr.io/react-frontend:0.1
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: acr-secret
