frontend.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80       # 클러스터 내부 접근 포트
      targetPort: 80 # 파드 내부 포트
  type: ClusterIP     # NodePort나 LoadBalancer로 변경 가능
